# WordTrainer

./: pyproject.toml
