[tool.poetry]
name = "wordtrainer"
version = "0.1.0"
description = ""
authors = ["sunny <stratdn@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
